added line representing current pos, lock map dragging while playing

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <input type="button" id="revButton">
             <div class="upload-btn-wrapper">
                 <button id="uploadFileButton" class="btn">UPLOAD A FILE</button>
-                <input id="uploadFile" type="file" name="myfile" />
+                <input id="uploadFile" type="file" name="myfile" accept=".gpx"/>
             </div>
         </header>
 
