Real final version

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>A Leaflet map!</title>
+    <title>TRAX</title>
 
     <script src="scripts/jquery.js"></script>
     <script src="scripts/jquery-ui.js"></script>
@@ -10,6 +10,8 @@
     <script src="scripts/leaflet.hotline.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css" integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
         crossorigin="" />
+
+    <link rel="icon" href="images/pulse.png">
 
     <link id="colorSet" rel="stylesheet" type="text/css" href="css/color_set1.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
