Fixed error popup

--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
     <div id="modal2" class="bg-modal">
         <div id="popupError">
-            <h2>Invalid GPX format.</h2>
+            <h2 id="errorH2">Invalid GPX format.</h2>
             <p id="okButton">OK</p>
         </div>
     </div>
